<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/batman"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/reservation_details"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/movie_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/choose_theater">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/theater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:hint="@string/adult_tickets">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numOfAdultTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:hint="@string/child_tickets">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numOfChildTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:onClick="goBack"
            android:text="@string/go_back"
            android:textColor="@color/btn_text_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:onClick="ticketsDetailsActivity"
            android:text="@string/buy_tickets"
            android:textColor="@color/btn_text_color"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/batIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bat_icon" />

</LinearLayout>